fixed z-index of canvas container

--- a/src/components/Editor.module.css
+++ b/src/components/Editor.module.css
@@ -35,6 +35,7 @@
     position: sticky;
     top: 0;
     max-height: 574px;
+    z-index: 2;
 }
 
 .coverLoading {
